<resources>
    <string name="app_name">FoodNFit</string>
    <string name="gmail">22521083@gm.uit.edu.vn</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="or">OR</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_incorrect">Password is incorrect</string>
    <string name="verify_account">Verify Account</string>
    <string name="verify_text">Verify your account by entering verification code we sent to</string>
    <string name="verify">Verify</string>
    <string name="have_not_code">Didn\'t receive the code?</string>
    <string name="resend">Resend</string>
    <string name="otp_success">Verification successful!</string>
    <string name="otp_incomplete">Please enter all 6 OTP digits.</string>
    <string name="otp_invalid">Invalid OTP code!</string>
    <string name="sending_verification">Sending verification code, please wait…</string>
    <string name="home_menu">Home</string>
    <string name="food_menu">Food</string>
    <string name="exercise_menu">Exercise</string>
    <string name="logout_menu">Logout</string>
    <string name="statistic_menu">Statistic</string>
    <string name="setting_menu">Setting</string>
    <string name="profile_menu">Profile</string>
    <string name="search_menu">Search</string>
    <string name="filter_menu">Filter</string>
    <string name="view_menu">View</string>
    <string name="meal_reminder">Meal reminder</string>
    <string name="exercise_reminder">Exercise reminder</string>
    <string name="notification_menu">Notification</string>
    <string name="logging_menu">Logging</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="scan">Scan</string>
    <string name="what_name">What is your name?</string>
    <string name="your_birth">Your date of birth?</string>
    <string name="your_gender">What is your gender?</string>
    <string name="your_tall">How tall are you?</string>
    <string name="your_weight">Current weight?</string>
    <string name="personalize_experience">We use this data to provide you with the best possible experience while using the app</string>
    <string name="input_name">Input your name</string>
    <string name="your_goal">What is your goal?</string>
    <string name="lose_weight">Lose weight</string>
    <string name="gain_weight">Gain weight</string>
    <string name="stay_healthy">Stay healthy</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="setting_display">Display</string>
    <string name="change_language">App language</string>
    <string name="notification_title">Notification</string>
    <string name="step_permission">Step tracking permission</string>
    <string name="permission">Permission</string>
    <string name="notification_reminder">Reminder</string>
    <string name="security_title">Security</string>
    <string name="change_password">Change password</string>
    <string name="feedback_title">Feedback</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_current_and_new_password">Please enter your current and new password</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="your_info">Your information</string>
    <string name="your_goal_info">Your Goal</string>
    <string name="food_goal">Food Goal</string>
    <string name="exercise_goal">Exercise Goal</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="update_info">Update Information</string>
    <string name="activity">Activity</string>
    <string name="calo_nutrition">Calories &amp; Nutrition</string>
    <string name="intake">Intake</string>
    <string name="burned">Burned</string>
    <string name="required">Required</string>
    <string name="movement">Movement</string>
    <string name="step">Step</string>
    <string name="distance">Distance</string>
    <string name="detail">Detail</string>
    <string name="drink_water">Drink water</string>
    <string name="bmi">Body Mask Index (BMI)</string>
    <string name="day_meal">Day\'s meals</string>
    <string name="forward">&gt;</string>
    <string name="backward">&lt;</string>
    <string name="logs">Logs</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="severe_obesity">Severe obesity</string>
    <string name="morbid_obesity">Morbid obesity</string>
    <string name="super_obesity">Super obesity</string>
    <string name="calories_gained">Calories gained</string>
    <string name="calories_burnt">Calories burnt</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="total_protein">Total protein</string>
    <string name="total_fat">Total fat</string>
    <string name="total_carb">Total carb</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe">Recipe</string>
    <string name="nutrients">Nutrients</string>
    <string name="food_detail">Food Detail</string>
    <string name="breakfast_log">Breakfast log</string>
    <string name="lunch_log">Lunch log</string>
    <string name="dinner_log">Dinner log</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="snack_log">Snack log</string>
    <string name="more_detail">More details</string>
    <string name="add_food">Add food</string>
    <string name="kcal">kcal</string>
    <string name="g">g</string>
    <string name="selected_meal">Selected meal</string>
    <string name="all_meal">All meal</string>
    <string name="zero">0</string>
    <string name="food">Foods</string>
    <string name="food_name">Food name</string>
    <string name="add_meal">Add meal</string>
    <string name="meal_log_title">%s Log</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="minute">Minutes</string>
    <string name="hour">Hours</string>
    <string name="kcal_burnt">Kcal burnt</string>
    <string name="em_dash">	\u2014 </string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="seconds">Seconds</string>
    <string name="confirm_exercise">Complete Exercise</string>
    <string name="confirm_content">Are you sure you want to mark this exercise as completed? This action will be saved in your workout history</string>
    <string name="yes">Yes</string>
    <string name="no">No, thanks</string>
    <string name="add_exercise">Add exercise</string>
    <string name="update_exercise">Update exercise</string>
    <string name="description">Description: </string>
    <string name="type">Type: </string>
    <string name="level">Level: </string>
    <string name="muscleGroup">Muscle Group: </string>
    <string name="equipment">Equipment: </string>
    <string name="note">Note: </string>
    <string name="find_exercise">Search for exercises</string>
    <string name="all_exercise">All exercise</string>
    <string name="selected_exercise">Selected exercise</string>
    <string name="make_plan">Make a plan</string>
    <string name="stay_active">Stay active – today’s workout is waiting!</string>
    <string name="information">Information</string>
    <string name="activity_log">Activity log</string>
    <string-array name="exercise_categories">
        <item>Gym</item>
        <item>Cardio</item>
        <item>Strength Training</item>
        <item>Weightlifting</item>
        <item>Bodyweight</item>
        <item>HIIT</item>
        <item>CrossFit</item>
        <item>Powerlifting</item>
        <item>Calisthenics</item>
        <item>Resistance Band Training</item>
        <item>Pilates</item>
        <item>Yoga</item>
        <item>Stretching</item>
        <item>Mobility Training</item>
        <item>Flexibility</item>
        <item>Core Training</item>
        <item>Abdominal Workout</item>
        <item>Back Workout</item>
        <item>Leg Day</item>
        <item>Upper Body Workout</item>
        <item>Full Body Workout</item>
        <item>Functional Training</item>
        <item>Endurance Training</item>
        <item>Balance</item>
        <item>Rehabilitation</item>
        <item>Warm-up</item>
        <item>Cool-down</item>
        <item>Running</item>
        <item>Cycling</item>
        <item>Swimming</item>
        <item>Hiking</item>
        <item>Rowing</item>
        <item>Martial Arts</item>
        <item>Boxing</item>
        <item>Kickboxing</item>
        <item>Dance Fitness</item>
        <item>Zumba</item>
        <item>Aerobics</item>
        <item>Tabata</item>
    </string-array>
    <string-array name="activity_levels">
        <item>Sedentary (Little or no exercise)</item>
        <item>Lightly Active (Light exercise 1–3 days/week)</item>
        <item>Moderately Active (Moderate exercise 3–5 days/week)</item>
        <item>Very Active (Hard exercise 6–7 days/week)</item>
        <item>Extra Active (Very intense exercise or physical job)</item>
    </string-array>
    <string-array name="meal_goal">
        <item>lose</item>
        <item>maintain</item>
        <item>gain</item>
    </string-array>
    <string name="weight_chart">Weight chart</string>
    <string name="exercise_chart">Exercise Chart</string>
    <string name="Initial">Initial</string>
    <string name="weight_now">Current</string>
    <string name="weight_change">Change</string>
    <string name="bmi_index">BMI index</string>
    <string name="your_bmi">Your BMI is: Your BMI is: </string>
    <string name="fall_into">you fall into the </string>
    <string name="kg">kg</string>
    <string name="weight_history">Weight history</string>
    <string name="sessions">Sessions</string>
    <string name="number_session">Training sessions</string>
    <string name="total_calo_burnt">Calories burned</string>
    <string name="steps_count">Steps count</string>
    <string name="avg_calo">Average calories</string>
    <string name="all">All</string>
    <string name="blocked">Blocked</string>
    <string name="un_blocked">Unblocked</string>
    <string name="title_account_management">Account Management</string>
    <string name="hint_search">Search by name, email…</string>
    <string name="button_add_account">Add New</string>
    <string name="button_filter_gender">Gender</string>
    <string name="button_filter_status">Status</string>
    <string name="button_clear_filter">Clear Filters</string>
    <string name="text_no_accounts">No accounts available</string>
    <string name="text_add_account_prompt">Add a new account to start managing</string>
    <string name="cancel_button">Cancel</string>
    <string name="save">Save</string>
</resources>