<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home_menu"/>

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/account"/>

        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_food"
            android:title="@string/food_menu"/>

        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_exercise"
            android:title="@string/exercise_menu"/>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout_menu"
                android:icon="@drawable/ic_logout_24"/>
        </menu>
    </item>
</menu>