<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.vanphong.foodnfit.Fragment.HomeFragment"
        android:label="@string/home_menu"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/food"
        android:name="com.vanphong.foodnfit.Fragment.FoodFragment"
        android:label="@string/food_menu"
        tools:layout="@layout/fragment_food" />
    <fragment
        android:id="@+id/exercise"
        android:name="com.vanphong.foodnfit.Fragment.ExerciseFragment"
        android:label="@string/exercise_menu"
        tools:layout="@layout/fragment_exercise" />
    <fragment
        android:id="@+id/statistic"
        android:name="com.vanphong.foodnfit.Fragment.StatisticFragment"
        android:label="@string/statistic_menu"
        tools:layout="@layout/fragment_statistic" />
    <fragment
        android:id="@+id/profile"
        android:name="com.vanphong.foodnfit.Fragment.PersonFragment"
        android:label="@string/profile_menu"
        tools:layout="@layout/fragment_person" />
</navigation>