<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_white_corner_16"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_exercise"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/bg_green_corner16_top_left_top_right"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/black"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:alpha="0.4"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/no"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green_corner"
            app:cornerRadius="12dp"
            android:text="@string/yes"
            android:layout_marginStart="5dp"
            android:id="@+id/btn_confirm_dialog"/>
    </LinearLayout>
</LinearLayout>