<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.StatisticFragment">

    <data>
        <variable
            name="statisticViewModel"
            type="com.vanphong.foodnfit.viewModel.StatisticViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:title="@string/statistic_menu"
                app:titleCentered="false" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/btn_day"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_calories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calories"
                android:textColor="@color/black"
                android:backgroundTint="@android:color/transparent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:backgroundTint="@android:color/transparent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_exercise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exercise_menu"
                android:textColor="@color/black"
                android:backgroundTint="@android:color/transparent"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1" />
    </LinearLayout>
</layout>